# papierkram

./: Cargo.toml  README.md  build-ppa.sh
.github/workflows/: cargo-build.yml  continous-integration.yml  secret-example.yml  static.yml
hooks/: pre-commit
src/: args.rs  cli_calendar.rs  config.rs  datastore.rs  dates.rs  default.conf  duration_newtype.rs  generic_datastore.rs  main.rs  models.rs  table_cli_helper.rs  toggl.rs
src/commands/: detect.rs  event.rs  mod.rs  probe.rs  toggl.rs
src/sql/: create_tables.sql  select_report.sql  select_report_export.sql
static/: index.html
