[package]
name = "papierkram"
version = "0.1.45"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "RincewindWizzard <git@magierdinge.de>"
copyright = "2023, 2023 <git@magierdinge.de>"
depends = "ca-certificates, $auto"


[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
confy = "0.5.1"
directories = "5.0.0"
log = "0.4.17"
serde = "^1.0.159"
serde_derive = "^1.0.159"
serde_json = "^1.0.95"
stderrlog = "^0.5.4"
toml = "^0.7.3"
chrono = { version = "^0.4.24", features = ["serde"] }
rusqlite = { version = "^0.29.0", features = ["bundled", "chrono"] }
thiserror = "^1.0.40"
cli-table = "0.4.7"
dateparser = "0.2.0"
anyhow = "1.0.70"
reqwest = { version = "0.11.16", features = ["json", "blocking", "rustls-tls"] }
serde_with = "2.3.2"
